--- a/index.html
+++ b/index.html
@@ -1,43 +1,44 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+crossorigin="anonymous"></script>
+<title>스파르타코딩클럽 | 부트스트랩 연습하기</title>
+<style>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-
-    <title>스파르타코딩클럽 | 부트스트랩 연습하기</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
-
-        * {
-            font-family: 'Gowun Dodum', sans-serif;
-        }
+           /* 구글 폰트 추가하기 */
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
+* {
+font-family: 'Gowun Dodum', sans-serif;
+}
 
         .mytitle {
             background-color: green;
             color: white;
 
+            width: 100%;
             height: 250px;
 
+            /* 세로가운데 정렬하는 방법 */
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
 
+            /* 이미지 어둡게 하는 방법 */
             background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg');
             background-position: center;
             background-size: cover;
         }
-
+               /* 버튼 만들고 꾸미는 방법 */
         .mytitle>button {
-            width: 250px;
+            width: 200px;
             height: 50px;
 
             background-color: transparent;
@@ -55,23 +56,22 @@
         }
 
         .mycomment {
-            color: gray;
+            color:gray;
+
         }
 
         .mycards {
             width: 1200px;
             margin: 20px auto 20px auto;
         }
-
         .mypost {
             width: 500px;
             margin: 20px auto 20px auto;
             padding: 20px 20px 20px 20px;
-
             box-shadow: 0px 0px 3px 0px gray;
         }
-
         .mybtn {
+            /* 가로가운데 정렬하는 방법 */
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -79,85 +79,92 @@
 
             margin-top: 20px;
         }
-
-        .mybtn>button {
-            margin-right: 10px; 
+        .mybtn > button {
+            margin-right: 10px;
         }
-    </style>
-</head>
 
+</style>
+</head>
 <body>
     <div class="mytitle">
-        <h1>내 생애 최고의 영화들</h1>
-        <button>영화 기록하기</button>
+<h1>내 생애 최고의 영화들</h1>
+<button>영화 기록하기</button>
+</div>
+
+<div class="mypost">
+    <div class="form-floating mb-3">
+    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+    <label for="floatingInput">영화URL</label>
     </div>
-    <div class="mypost">
-        <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">영화 URL</label>
-            <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
-                <label for="floatingTextarea">코멘트</label>
-            </div>
-        </div>
+    <div class="input-group mb-3">
+        <label class="input-group-text" for="inputGroupSelect01">Options</label>
+        <select class="form-select" id="inputGroupSelect01">
+          <option selected>별점</option>
+          <option value="1">⭐</option>
+          <option value="2">⭐⭐</option>
+          <option value="3">⭐⭐⭐</option>
+          <option value="4">⭐⭐⭐⭐</option>
+          <option value="5">⭐⭐⭐⭐⭐</option>
+        </select>
+      </div>
+    <div class="form-floating">
+    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+    <label for="floatingTextarea">코멘트</label>
     </div>
     <div class="mybtn">
-        <button type="button" class="btn btn-dark">기록하기</button>
-        <button type="button" class="btn btn-outline-dark">닫기</button>
+    <button type="button" class="btn btn-dark">기록하기</button>
+    <button type="button" class="btn btn-outline-dark">닫기</button>
     </div>
-    </div>
-    <div class="mycards">
-        <div class="row row-cols-1 row-cols-md-4 g-4">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다.</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
-                    </div>
-                </div>
+</div>
+<div class="mycards">
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">영화 제목</h5>
+              <p class="card-text">코멘트 부분</p>
+              <p>⭐⭐⭐</p>
+              <p class="mycomment">나의 의견</p>
             </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다.</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
-                    </div>
+          </div>
+             </div>
+             <div class="col">
+                <div class="card">
+                  <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">영화 제목</h5>
+                    <p class="card-text">코멘트 부분</p>
+                    <p>⭐⭐⭐</p>
+                    <p class="mycomment">나의 의견</p>
+                  </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다.</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
+                   </div>
+                   <div class="col">
+                    <div class="card">
+                      <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">영화 제목</h5>
+                        <p class="card-text">코멘트 부분</p>
                         <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
+                        <p class="mycomment">나의 의견</p>
+                      </div>
                     </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다.</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
-                    </div>
-                </div>
-            </div>
+                       </div>
+                       <div class="col">
+                        <div class="card">
+                          <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">영화 제목</h5>
+                            <p class="card-text">코멘트 부분</p>
+                            <p>⭐⭐⭐</p>
+                            <p class="mycomment">나의 의견</p>
+                          </div>
+                        </div>
+                           </div>
         </div>
-    </div>
+      </div>
+      </div>
+</div>
 </body>
-
 </html>
