--- a/index.html
+++ b/index.html
@@ -1,179 +1,217 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-crossorigin="anonymous"></script>
-<title>스파르타코딩클럽 | 부트스트랩 연습하기</title>
-<style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <title>스파르타코딩클럽 | 부트스트랩 연습하기</title>
+  <style>
+    /* 구글 폰트 추가하기 */
+    @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
 
-           /* 구글 폰트 추가하기 */
-@import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
-* {
-font-family: 'Gowun Dodum', sans-serif;
-}
+    * {
+      font-family: 'Gowun Dodum', sans-serif;
+    }
 
-        .mytitle {
-            background-color: green;
-            color: white;
+    .mytitle {
+      background-color: green;
+      color: white;
 
-            width: 100%;
-            height: 250px;
+      width: 100%;
+      height: 250px;
 
-            /* 세로가운데 정렬하는 방법 */
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+      /* 세로가운데 정렬하는 방법 */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
 
-            /* 이미지 어둡게 하는 방법 */
-            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg');
-            background-position: center;
-            background-size: cover;
-        }
-               /* 버튼 만들고 꾸미는 방법 */
-        .mytitle>button {
-            width: 200px;
-            height: 50px;
+      /* 이미지 어둡게 하는 방법 */
+      background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg');
+      background-position: center;
+      background-size: cover;
+    }
 
-            background-color: transparent;
+    /* 버튼 만들고 꾸미는 방법 */
+    .mytitle>button {
+      width: 200px;
+      height: 50px;
 
-            border: 1px solid white;
-            color: white;
+      background-color: transparent;
 
-            border-radius: 50px;
+      border: 1px solid white;
+      color: white;
 
-            margin-top: 20px;
-        }
+      border-radius: 50px;
 
-        .mytitle>button:hover {
-            border: 2px solid white;
-        }
+      margin-top: 20px;
+    }
 
-        .mycomment {
-            color:gray;
+    .mytitle>button:hover {
+      border: 2px solid white;
+    }
 
-        }
+    .mycomment {
+      color: gray;
 
-        .mycards {
-            width: 1200px;
-            margin: 20px auto 20px auto;
-        }
-        .mypost {
-            width: 500px;
-            margin: 20px auto 20px auto;
-            padding: 20px 20px 20px 20px;
-            box-shadow: 0px 0px 3px 0px gray;
-        }
-        .mybtn {
-            /* 가로가운데 정렬하는 방법 */
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
+    }
 
-            margin-top: 20px;
-        }
-        .mybtn > button {
-            margin-right: 10px;
-        }
+    .mycards {
+      width: 1200px;
+      margin: 20px auto 20px auto;
+    }
 
-</style>
-<script>
-    $(document).ready(function() {
-    fetch("http://spartacodingclub.shop/sparta_api/weather/seoul").then(res => res.json()).then(data => {
-        let temp = data['temp'] 
+    .mypost {
+      width: 500px;
+      margin: 20px auto 20px auto;
+      padding: 20px 20px 20px 20px;
+      box-shadow: 0px 0px 3px 0px gray;
+    }
+
+    .mybtn {
+      /* 가로가운데 정렬하는 방법 */
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+
+      margin-top: 20px;
+    }
+
+    .mybtn>button {
+      margin-right: 10px;
+    }
+  </style>
+  <script>
+    $(document).ready(function () {
+      fetch("http://spartacodingclub.shop/sparta_api/weather/seoul").then(res => res.json()).then(data => {
+        let temp = data['temp']
         $('#temp').text(temp)
-    })
-})
-</script>
-</head>
-<body>
-    <div class="mytitle">
-<h1>내 생애 최고의 영화들</h1>
-<div>현재 서울의 날씨 : <span id="temp">20</span>도</div>
-<button>영화 기록하기</button>
-</div>
+      })
 
-<div class="mypost">
+      fetch("http://spartacodingclub.shop/web/api/movie").then(res => res.json()).then(data => {
+
+        let rows = data['movies']
+        $('#cards').empty()
+        rows.forEach((a) => {
+          let title = a['title']
+          let desc = a['desc']
+          let comment = a['comment']
+          let star = a['star']
+          let image = a['image']
+
+          let star_image = '⭐'.repeat(star)
+
+          let temp_html = `<div class="col">
+                                  <div class="card">
+                                    <img src="${image}">
+                                    <div class="card-body">
+                                      <h5 class="card-title">${title}</h5>
+                                      <p class="card-text">${desc}</p>
+                                      <p>${star_image}</p>
+                                      <p class="mycomment">${comment}</p>
+                                    </div>
+                                  </div>
+                                </div>`
+          $('#cards').append(temp_html)
+        })
+      })
+    })
+  </script>
+</head>
+
+<body>
+  <div class="mytitle">
+    <h1>내 생애 최고의 영화들</h1>
+    <div>현재 서울의 날씨 : <span id="temp">20</span>도</div>
+    <button>영화 기록하기</button>
+  </div>
+
+  <div class="mypost">
     <div class="form-floating mb-3">
-    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-    <label for="floatingInput">영화URL</label>
+      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+      <label for="floatingInput">영화URL</label>
     </div>
     <div class="input-group mb-3">
-        <label class="input-group-text" for="inputGroupSelect01">Options</label>
-        <select class="form-select" id="inputGroupSelect01">
-          <option selected>별점</option>
-          <option value="1">⭐</option>
-          <option value="2">⭐⭐</option>
-          <option value="3">⭐⭐⭐</option>
-          <option value="4">⭐⭐⭐⭐</option>
-          <option value="5">⭐⭐⭐⭐⭐</option>
-        </select>
-      </div>
+      <label class="input-group-text" for="inputGroupSelect01">Options</label>
+      <select class="form-select" id="inputGroupSelect01">
+        <option selected>별점</option>
+        <option value="1">⭐</option>
+        <option value="2">⭐⭐</option>
+        <option value="3">⭐⭐⭐</option>
+        <option value="4">⭐⭐⭐⭐</option>
+        <option value="5">⭐⭐⭐⭐⭐</option>
+      </select>
+    </div>
     <div class="form-floating">
-    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
-    <label for="floatingTextarea">코멘트</label>
+      <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+      <label for="floatingTextarea">코멘트</label>
     </div>
     <div class="mybtn">
-    <button type="button" class="btn btn-dark">기록하기</button>
-    <button type="button" class="btn btn-outline-dark">닫기</button>
+      <button type="button" class="btn btn-dark">기록하기</button>
+      <button type="button" class="btn btn-outline-dark">닫기</button>
     </div>
-</div>
-<div class="mycards">
-    <div class="row row-cols-1 row-cols-md-4 g-4">
-        <div class="col">
-          <div class="card">
-            <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">영화 제목</h5>
-              <p class="card-text">코멘트 부분</p>
-              <p>⭐⭐⭐</p>
-              <p class="mycomment">나의 의견</p>
-            </div>
+  </div>
+  <div class="mycards">
+    <div id="cards" class="row row-cols-1 row-cols-md-4 g-4">
+      <div class="col">
+        <div class="card">
+          <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+            class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">영화 제목</h5>
+            <p class="card-text">코멘트 부분</p>
+            <p>⭐⭐⭐</p>
+            <p class="mycomment">나의 의견</p>
           </div>
-             </div>
-             <div class="col">
-                <div class="card">
-                  <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">영화 제목</h5>
-                    <p class="card-text">코멘트 부분</p>
-                    <p>⭐⭐⭐</p>
-                    <p class="mycomment">나의 의견</p>
-                  </div>
-                </div>
-                   </div>
-                   <div class="col">
-                    <div class="card">
-                      <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">영화 제목</h5>
-                        <p class="card-text">코멘트 부분</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">나의 의견</p>
-                      </div>
-                    </div>
-                       </div>
-                       <div class="col">
-                        <div class="card">
-                          <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg" class="card-img-top" alt="...">
-                          <div class="card-body">
-                            <h5 class="card-title">영화 제목</h5>
-                            <p class="card-text">코멘트 부분</p>
-                            <p>⭐⭐⭐</p>
-                            <p class="mycomment">나의 의견</p>
-                          </div>
-                        </div>
-                           </div>
         </div>
       </div>
+      <div class="col">
+        <div class="card">
+          <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+            class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">영화 제목</h5>
+            <p class="card-text">코멘트 부분</p>
+            <p>⭐⭐⭐</p>
+            <p class="mycomment">나의 의견</p>
+          </div>
+        </div>
       </div>
-</div>
+      <div class="col">
+        <div class="card">
+          <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+            class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">영화 제목</h5>
+            <p class="card-text">코멘트 부분</p>
+            <p>⭐⭐⭐</p>
+            <p class="mycomment">나의 의견</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+            class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">영화 제목</h5>
+            <p class="card-text">코멘트 부분</p>
+            <p>⭐⭐⭐</p>
+            <p class="mycomment">나의 의견</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
 </body>
+
 </html>
